--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "cmgmyr/messenger": "^2.15",
         "cviebrock/eloquent-sluggable": "^4.2",
         "illuminate/html": "5.*",
         "laracasts/flash": "3.0.2",
